--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap");
+
+/* GLOBAL */
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
 
 :root {
@@ -12,57 +16,68 @@
   background: transparent;
 }
 
-body {
-  background-color: white;
-  overflow: hidden;
+@keyframes clockTranlateAnim {
+  0% {
+    transform: translateY(-10px);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
+
+@keyframes clockRotationAnim {
+  0% {
+    transform: perspective(1600px) rotateY(20deg) rotateX(20deg);
+  }
+  50% {
+    transform: perspective(1600px) rotateY(12deg) rotateX(17deg);
+  }
+  100% {
+    transform: perspective(1600px) rotateY(20deg) rotateX(20deg);
+  }
+}
+
+/* CLOCK */
 
 .grid-1 {
   grid-column: 1;
   grid-row: 1;
 }
 
-#background {
+#clock-container {
   display: grid;
-  width: 100%;
   height: 100vh;
 }
 
-/* IMAGE LINE AND TEXT */
-
 #image-line-container {
   display: flex;
-  height: 45%;
-  margin: auto;
-  overflow: hidden;
-}
-
-#image-line {
-  width: 100%;
   align-self: center;
-  margin-top: -100px;
+  height: 375px;
+  background-color: rgb(245, 245, 245);
 }
 
-.klok-text-container {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+.clock-text-container {
   width: 300px;
-  height: fit-content;
-  margin: auto 0 auto -32%;
+  margin: auto 0 auto 66%;
 }
 
-.klok-text {
-  color: white;
+.clock-text {
+  color: rgb(75, 75, 75);
   font-size: 14px;
 }
 
-.klok-text-header {
-  font-weight: 100;
-  font-size: 40px;
+.clock-text-header {
+  font-size: 30px;
+  font-weight: 500;
+  font-family: "Barlow Condensed", sans-serif;
 }
 
-.klok-text-subheader {
-  font-weight: 100;
-  font-size: 24px;
+.clock-text-subheader {
+  font-weight: 300;
+  font-size: 20px;
 }
 
 .clear-btn {
@@ -75,6 +90,7 @@ body {
   width: 120px;
   border-radius: 17px;
   margin-top: 6px;
+  box-shadow: 1px 1px 6px rgb(0, 0, 0, 0.25);
 }
 
 #colors-panel {
@@ -85,8 +101,8 @@ body {
 .color-btn {
   margin: auto;
   background-color: rgb(117, 105, 105);
-  width: 24px;
-  height: 24px;
+  width: 22px;
+  height: 22px;
   border-radius: 100%;
 }
 
@@ -94,40 +110,52 @@ body {
   width: 100px;
 }
 
+.color-btn:hover,
 #size-btn:hover {
   filter: brightness(0.8);
-  transition: 0.5s filter;
+  transition: 0.4s filter;
 }
 
+.color-btn:not(hover),
 #size-btn:not(hover) {
   filter: brightness(1);
-  transition: 0.5s filter;
+  transition: 0.3s filter;
 }
 
-/* CLOCK */
+#clock-rotation {
+  animation: clockTranlateAnim 4s ease-in-out infinite;
+  display: grid;
+}
 
 #cube {
+  animation: clockRotationAnim 9s ease-in-out infinite;
   display: grid;
-  margin: auto;
   transform-style: preserve-3d;
-  transform: perspective(1600px) rotateY(15deg) rotateX(20deg);
 }
 
-.tile {
+.clock-tile {
   width: calc(var(--clock-size) / 8);
   height: var(--clock-size);
   margin: auto;
-  background-image: url("src/Wood_Texture.png");
+  background-image: url("src/Color1_Texture.jpg");
   background-size: 100%;
 }
 
 .side {
   filter: brightness(0.5);
+  background-size: cover;
 }
 
 .front {
   display: grid;
   width: var(--clock-size);
+  transform: rotateZ(0deg);
+}
+
+.back {
+  width: var(--clock-size);
+  transform: translateZ(calc(var(--clock-size) / -8));
+  filter: brightness(0.5);
 }
 
 .top {
@@ -153,8 +181,6 @@ body {
 /* Align clock and dots position using grid */
 #clock-grid,
 #dotsContainer {
-  height: inherit;
-  width: inherit;
   display: grid;
 }
 
@@ -173,27 +199,105 @@ body {
 .dot {
   width: calc(var(--clock-size) / 60);
   height: calc(var(--clock-size) / 60);
+  mix-blend-mode: multiply;
+  background-color: rgb(160, 160, 160);
   border-radius: 100%;
-  background-color: rgb(97, 70, 39);
   box-shadow: -1px -1px 1px rgb(49, 48, 47), 2px 2px 2px rgb(255, 255, 255, 0.3);
 }
 
 .dot-active {
   background-color: white;
+  mix-blend-mode: normal;
   box-shadow: 0 0 30px white, 0 0 20px white, 0 0 10px white, 0 0 2px white;
 }
 
 .letter {
   margin: auto;
-  color: rgb(128, 82, 39);
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  mix-blend-mode: multiply;
+  color: rgb(160, 160, 160);
   font-size: calc(var(--clock-size) / 17);
   font-weight: 500;
-  text-shadow: -1px -1px 1px rgb(49, 48, 47),
-    1px 1px 0 rgba(255, 255, 255, 0.25);
+  text-shadow: -1px -1px 1px rgb(49, 48, 47);
 }
 
 .letter-active {
   color: white;
+  mix-blend-mode: normal;
   text-shadow: 0 0 10px white, 0 0 2px white;
+}
+
+/* /////////////////////// MOBILE /////////////////////// */
+
+@media only screen and (orientation: portrait) {
+  :root {
+    --clock-size: 300px;
+    --background-color: rgb(240, 240, 240);
+    overflow: hidden;
+  }
+
+  .content-desktop {
+    display: none;
+  }
+
+  body {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--background-color);
+  }
+
+  #clock-container {
+    display: block;
+    height: fit-content;
+    margin: auto;
+  }
+
+  .clock-text-container {
+    margin: 0 auto 0 auto;
+    text-align: center;
+    padding: 30px 10px 30px 10px;
+    width: 100%;
+    height: fit-content;
+    background-color: white;
+    box-shadow: 0 15px 20px rgb(0, 0, 0, 0.04);
+  }
+
+  .clock-text-header {
+    font-size: 40px;
+  }
+
+  .clock-text-subheader {
+    font-size: 25px;
+  }
+
+  #cube {
+    margin: auto;
+    padding: 75px 0 75px 0;
+  }
+
+  #colors-panel {
+    margin: 15px auto auto auto;
+    border-radius: 500px;
+    width: fit-content;
+    height: fit-content;
+  }
+
+  .color-btn {
+    width: 35px;
+    height: 35px;
+    margin: 10px;
+  }
+
+  .clock-tile {
+    width: calc(var(--clock-size) / 8);
+    height: var(--clock-size);
+  }
+
+  .front {
+    width: var(--clock-size);
+  }
+
+  .back {
+    width: var(--clock-size);
+  }
 }
